[package]
name = "ntrace"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_builder = "4.5.42"
tokio = { version = "1.47", features = ["full"] }
pnet = "0.35"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
anyhow = "1.0"
rustls = "0.23"
webpki = "0.22"

[dev-dependencies]
tempfile = "3.13"
tokio-test = "0.4"
