[package]
name = "ntrace"
version = "0.2.0"
edition = "2024"
authors = ["Suraj <suraj410401@gmail.com>"]
description = "A fast and secure network port scanner and protocol analyzer"
repository = "https://github.com/surajk-m/ntrace"
license = "MIT"
keywords = ["network", "security", "scanner", "port-scanner", "protocol-analyzer"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"
build = "build.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_builder = "4.5.42"
tokio = { version = "1.47", features = ["full"] }
pnet = "0.35"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
anyhow = "1.0"
rustls = "0.23"
webpki = "0.22"
colored = "3.0"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
once_cell = "1.21"
indicatif = "0.18"
trust-dns-resolver = "0.23"
rand = "0.9.2"
libc = "0.2.174"
futures = "0.3.31"
regex = "1.11.1"
num_cpus = "1.17.0"
crossbeam = "0.8.4"
core_affinity = "0.8.3"

[dev-dependencies]
tempfile = "3.13"
tokio-test = "0.4"
